Column and row headers should not generally report that they have column & row headers.

Perhaps at a later time we may want to deal with a case where they can,
but for now this is a simple fix for repeated text in table headers in
NVDA.

Bug: 595233
Change-Id: I3144d2753757b54a1ea16bb23099aa884a221613
Reviewed-on: https://chromium-review.googlesource.com/745312
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514263}
Former-commit-id: d89dc9f78762c4bd07deaf05bff4d89ef91ba6e6